Fix margin issues causing white space

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,7 +275,6 @@ button {
   background-color: #17353B;
   height: 30vh;
   color: #FAECD9;
-  margin-top: 3rem;
 }
 
 ul.social-media-icons {
@@ -302,6 +301,7 @@ ul.social-media-icons {
 
 .custom-card {
   background-color: #FAECD9;
+  margin-bottom: 3rem;
 }
 
 .link {
